<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="braintech.cg.hubblo.activite.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginTop="150dp"
            android:layout_gravity="center"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/ic_launcher"/>
        <TextView
            android:textColor="@color/common_google_signin_btn_text_light_default"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textStyle="normal"
            android:text="@string/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textSize="16dp"
            android:textColor="#22a7f0"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/terms"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use"
            android:textSize="16dp"
            android:textColor="#22a7f0"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            />
    </LinearLayout>

</RelativeLayout>
