<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="braintech.cg.hubblo.connection.LoginActivity">

    <TextView
        android:id="@+id/ubblos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/app_name"
        android:textColor="#2C3646"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        />

    <LinearLayout
        android:id="@+id/main"
        android:orientation="vertical"
        android:layout_below="@id/ubblos"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/LoginUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:hint="@string/email"
                android:inputType="text"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColorHint="#a9b0c3" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#a9b0c3"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="0dp">

        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/LoginUserPassword"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#a9b0c3"
                android:layout_marginTop="0dp"
                android:background="#0000"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#a9b0c3"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="0dp"
            >
        </LinearLayout>

        <Button
            android:id="@+id/loginUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:theme="@style/BtnStyle"
            android:gravity="center"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:text="Or sign in with"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="#2C3646"/>
        <LinearLayout
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/main"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/LoginFacebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/fb"
                android:layout_marginRight="5dp"
                />
            <ImageView
                android:id="@+id/LoginGmail"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/google"/>

            <ImageView
                android:id="@+id/LoginPhone"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/phone"
                android:layout_marginRight="5dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="13dp"
            android:textColor="#2C3646"
            />
        <TextView
            android:id="@+id/lostpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="13dp"
            android:textColor="#2C3646"

            />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_centerInParent="true"
        android:foregroundGravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"/>

</RelativeLayout>
